Fix: Alignment issue of CTA content

--- a/src/component-styles/call-to-actions-styles.css
+++ b/src/component-styles/call-to-actions-styles.css
@@ -16,6 +16,7 @@
     flex-direction: row;
     width: 46%;
     justify-content: center;
+    align-items: center;
     font-size: .9rem;
 }
 
